--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" src="http://yandex.st/jquery/1.7.2/jquery.min.js"></script>
+
 </head>
 <body>
 <div class="mainDiv ui input focus horizontal list" id="mainDive">
 
-    <input type="text" title="0" class="bd item" id="0" MAXLENGTH="1" onchange="changehandler(event)">
-    <input type="text" title="1" class="bd item" id="1" MAXLENGTH="1" onchange="changehandler(event)">
-    <input type="text" title="2" class="bd item" id="2" MAXLENGTH="1" onchange="changehandler(event)">
-    <input type="text" title="3" class="bd item" id="3" MAXLENGTH="1" onchange="changehandler(event)">
-    <input type="text" title="4" class="bd item" id="4" MAXLENGTH="1" onchange="changehandler(event)">
-    <input type="text" title="5" class="bd item" id="5" MAXLENGTH="1" onchange="changehandler(event)">
-    <input type="text" title="6" class="bd item" id="6" MAXLENGTH="1" onchange="changehandler(event)">
-    <input type="text" title="7" class="bd item" id="7" MAXLENGTH="1" onchange="changehandler(event)">
-    <input type="text" title="8" class="bd item" id="8" MAXLENGTH="1" onchange="changehandler(event)">
+    <input type="button" title="0" class="bd item" id="0" MAXLENGTH="0" onchange="cheker()" onclick="changehandler(event)">
+    <input type="button" title="1" class="bd item" id="1" MAXLENGTH="0" onchange="cheker()" onclick="changehandler(event)">
+    <input type="button" title="2" class="bd item" id="2" MAXLENGTH="0" onchange="cheker()" onclick="changehandler(event)">
+    <input type="button" title="3" class="bd item" id="3" MAXLENGTH="0" onchange="cheker()" onclick="changehandler(event)">
+    <input type="button" title="4" class="bd item" id="4" MAXLENGTH="0" onchange="cheker()" onclick="changehandler(event)">
+    <input type="button" title="5" class="bd item" id="5" MAXLENGTH="0" onchange="cheker()" onclick="changehandler(event)">
+    <input type="button" title="6" class="bd item" id="6" MAXLENGTH="0" onchange="cheker()" onclick="changehandler(event)">
+    <input type="button" title="7" class="bd item" id="7" MAXLENGTH="0" onchange="cheker()" onclick="changehandler(event)">
+    <input type="button" title="8" class="bd item" id="8" MAXLENGTH="0" onchange="cheker()" onclick="changehandler(event)">
 </div>
 
 <script src="js.js"></script>
